--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,12 +62,8 @@ flutter:
   assets:
     - assets/images/backgrounds/
     - assets/images/logos/
-    - assets/images/bg_sign_up.png
-    - assets/images/envelope.png
-    - assets/images/logo.png
-    - assets/images/phone.png
-    - assets/images/unlock.png
-    - assets/images/privacy/privacy.png
+    - assets/images/icons/
+    - assets/images/others/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
