--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  pdf: ^3.8.1
+  pdfx: ^2.0.1+2
 
 dev_dependencies:
   flutter_test:
@@ -64,7 +64,6 @@ flutter:
     - assets/images/logos/
     - assets/images/icons/
     - assets/images/others/
-
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
