--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   pdfx: ^2.0.1+2
+  internet_file: ^1.0.0+2
+  path_provider: any
 
 dev_dependencies:
   flutter_test:
